fixtures/uitests/tests/ui/interface_trait_not_sync_and_send.stderr
error[E0277]: `dyn Trait` cannot be shared between threads safely
 --> $OUT_DIR[uniffi_uitests]/trait.uniffi.rs
  |
  | ::uniffi::expand_trait_interface_support!(r#Trait);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `dyn Trait` cannot be shared between threads safely
  |
  = help: the trait `Sync` is not implemented for `dyn Trait`
note: required by a bound in `_::{closure#0}::assert_impl_all`
 --> $OUT_DIR[uniffi_uitests]/trait.uniffi.rs
  |
  | ::uniffi::expand_trait_interface_support!(r#Trait);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_impl_all`
  = note: this error originates in the macro `::uniffi::expand_trait_interface_support` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `dyn Trait` cannot be sent between threads safely
 --> $OUT_DIR[uniffi_uitests]/trait.uniffi.rs
  |
  | ::uniffi::expand_trait_interface_support!(r#Trait);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `dyn Trait` cannot be sent between threads safely
  |
  = help: the trait `Send` is not implemented for `dyn Trait`
note: required by a bound in `_::{closure#0}::assert_impl_all`
 --> $OUT_DIR[uniffi_uitests]/trait.uniffi.rs
  |
  | ::uniffi::expand_trait_interface_support!(r#Trait);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_impl_all`
  = note: this error originates in the macro `::uniffi::expand_trait_interface_support` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `dyn ProcMacroTrait` cannot be shared between threads safely
  --> tests/ui/interface_trait_not_sync_and_send.rs:11:1
   |
11 | #[uniffi::export]
   | ^^^^^^^^^^^^^^^^^ `dyn ProcMacroTrait` cannot be shared between threads safely
   |
   = help: the trait `Sync` is not implemented for `dyn ProcMacroTrait`
note: required by a bound in `_::{closure#0}::assert_impl_all`
  --> tests/ui/interface_trait_not_sync_and_send.rs:11:1
   |
11 | #[uniffi::export]
   | ^^^^^^^^^^^^^^^^^ required by this bound in `assert_impl_all`
   = note: this error originates in the attribute macro `uniffi::export` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `dyn ProcMacroTrait` cannot be sent between threads safely
  --> tests/ui/interface_trait_not_sync_and_send.rs:11:1
   |
11 | #[uniffi::export]
   | ^^^^^^^^^^^^^^^^^ `dyn ProcMacroTrait` cannot be sent between threads safely
   |
   = help: the trait `Send` is not implemented for `dyn ProcMacroTrait`
note: required by a bound in `_::{closure#0}::assert_impl_all`
  --> tests/ui/interface_trait_not_sync_and_send.rs:11:1
   |
11 | #[uniffi::export]
   | ^^^^^^^^^^^^^^^^^ required by this bound in `assert_impl_all`
   = note: this error originates in the attribute macro `uniffi::export` (in Nightly builds, run with -Z macro-backtrace for more info)
